Fix: y overflow on smartphones

--- a/pirate/themes/shared/scss/components/_menu.scss
+++ b/pirate/themes/shared/scss/components/_menu.scss
@@ -137,10 +137,10 @@
                     width: 30px;
                     display: inline-block;
                     height: $menu-height;
-                    padding: 0 20px;
+                    padding: 0 10px;
                     cursor: pointer;
                     position: relative;
-                    right: -20px;
+                    right: -10px;
                     background: url('../' + $theme + '/icons/white/hamburger.svg') no-repeat center center;
 
                     opacity: 1;
